<resources>
    <string name="app_name">BarCode Scanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">addImage</string>
    <string name="delete_image">deleteImage</string>
    <string name="thumbnail">thumbnail</string>

    <string name="list_products">List Products</string>
    <string name="search_product">Search Product</string>
    <string name="scan_product">Scan Product</string>

    <string-array name="nav_drawer_labels">
        <item>@string/list_products</item>
        <item>@string/search_product</item>
        <item>@string/scan_product</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log Out</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="select_working_sheet">Select working sheet</string>
    <string name="search_icon">Search Icon</string>
    <string name="place_holder">Place Holder</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="modify_product">MODIFY PRODUCT</string>
    <string name="scan">SCAN</string>
    <string name="language">Language</string>
    <string name="romanian">Romanian</string>
    <string name="english">English</string>
    <string name="product_quantity">PRODUCT QUANTITY</string>
    <string name="product_price">PRODUCT PRICE</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="product_barcode">PRODUCT BARCODE</string>

</resources>
