<!-- Clipped Navigation Drawer -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/product_barcode"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/product_name"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_below="@+id/product_barcode"/>

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/product_price"
                android:textSize="18sp"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:layout_below="@id/product_name"/>

            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/product_quantity"
                android:textSize="18sp"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_below="@id/product_price"/>

            <Button
                android:id="@+id/product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/product_quantity"
                android:text="@string/add_product" />

        </RelativeLayout>

        <fragment
            android:id="@+id/nav_drwr_fragment"
            android:name="com.cilatare.barcodescanner.NavigationDrawerFragment"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
