<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:id="@+id/welcome_textView"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/launch_profile_picture"
        android:layout_below="@+id/welcome_textView"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_photo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_working_sheet"
        android:id="@+id/spreadsheet_button"
        android:layout_below="@+id/launch_profile_picture"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spreadsheet_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
