<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/language_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:text="@string/language"
        android:textSize="24sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:layout_below="@+id/language_textView"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/ro_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romanian"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/en_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</RelativeLayout>
